# electro-net

./: .dockerignore  .env.template  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
config/: settings.py  urls.py
employees/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
employees/migrations/: 0001_initial.py
network/: admin.py  apps.py  filters.py  forms.py  paginators.py  permissions.py  services.py  urls.py
network/management/commands/: seed_network_nodes.py  seed_products.py
network/migrations/: 0001_initial.py
network/models/: __init__.py  node.py  product.py
network/serializers/: __init__.py  node.py  product.py
network/views/: __init__.py  node.py  product.py
